objects/Twitter_Infos__mdt.object
<CustomObject>
    <description>Twitter Info MD will be used to store all the EndPoint and all the Sensitive Information which will be useful to Integrate Salesforce with Twitter.</description>
    <fields>
        <fullName>access_token_url__c</fullName>
        <label>access_token_url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>api_endpoint__c</fullName>
        <label>api endpoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>authorize_url__c</fullName>
        <label>authorize url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>oauth_callback__c</fullName>
        <label>oauth_callback</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oauth_consumer_Secret__c</fullName>
        <label>oauth consumer Secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oauth_consumer_key__c</fullName>
        <label>oauth_consumer_key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oauth_token__c</fullName>
        <label>oauth_token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>oauth_token_secret__c</fullName>
        <label>oauth_token_secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>request_token_url__c</fullName>
        <label>request_token_url</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>user_id__c</fullName>
        <label>user_id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>user_name__c</fullName>
        <label>user_name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Twitter Info</label>
    <pluralLabel>Twitter Infos</pluralLabel>
</CustomObject>